<resources>
    <string name="app_name">Loan EMI Calculator</string>
    <string name="emiCalcScreenName">Calculate EMI</string>
    <string name="loanAfford">Loan Affordability</string>
    <string name="compare">Compare Loans</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action">Action</string>
    <string name="oprn">Operation</string>
    <string name="shareApp">\nApp Download link - https://play.google.com/store/apps/details?id=</string>
    <string name="tellus">Tell us</string>
    <string name="feedback">FeedBack</string>
    <string name="more">More Apps</string>
    <string name="Homescreen">Home Screen</string>
    <string name="lakh">Lakh</string>
    <string name="shareVia">Share Via</string>
    <string name="infinity">Infinity</string>
    <string name="crore">Crore</string>
    <string name="million">Million</string>
    <string name="billion">Billion</string>
    <string name="trillion">Trillion</string>
    <string name="rateApp">Rate us</string>
    <string name="home">Home</string>
    <string name="shareRes">Share Result</string>
    <string name="textplain">text/plain</string>
    <string name="roi">Rate of Interest (%)</string>
    <string name="months">Months</string>
    <string name="year">Years</string>
    <string name="cfreq">Compounding Frequency</string>
    <string name="reset">Reset</string>
    <string name="maturity">Maturity Amount</string>
    <string name="interest">Interest Amount</string>
    <string name="time">Time Period</string>
    <string name="yy">Year</string>
    <string name="mm">Month</string>
    <string name="redirectToast">Rate our app! Redirecting to Google Play Store.</string>
    <string name="monthlyInst">Monthly Installment</string>
    <string name="emiPayablePerMonth">EMI Payable (per month)</string>
    <string name="period">Period</string>
    <string name="perAnnumROI">Interest Rate (%) P.A</string>
    <string name="affordableLoan">Affordable Loan Amount</string>
    <string name="loanSumm">Loan Summary</string>
    <string name="clear">Clear All</string>
    <string name="irate">Interest Rate</string>
    <string name="loanPaySumm">Loan Payment Summary</string>
    <string name="EMI">EMI</string>
    <string name="tenure">Tenure</string>
    <string name="loanAmt">Loan Amount</string>
    <string name="intPayable">Interest Payable</string>
    <string name="totPay">Total Payment</string>
    <string name="_0">0</string>
    <string name="calculate_emi">Calculate EMI</string>
    <string name="compare_loans">Compare Loans</string>
    <string name="tot_amount_">Total Amount (Loan + Interest)</string>
    <string name="emi_month_inst">EMI (Monthly Installment)</string>
    <string name="loan_1">Loan 1</string>
    <string name="loan_2">Loan 2</string>
   <string name="tenure_in_months">Tenure in months</string>

</resources>
