<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:statusBarBackground="@android:color/darker_gray"
    android:id="@+id/emiLoanAffordability">

    <include layout="@layout/app_bar_layout" />


    <RelativeLayout
        android:orientation="vertical"
        android:id="@+id/emi_full"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:text="@string/monthlyInst"
                    android:layout_height="match_parent"
                    android:id="@+id/installment"
                    android:layout_width="97dp"
                    android:textStyle="normal|bold"
                    android:textSize="14dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/emiPayablePerMonth"
                    android:id="@+id/affordEMI"
                    android:layout_weight="1"
                    android:textSize="14dp"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/period"
                    android:layout_height="wrap_content"
                    android:id="@+id/periodLabel"
                    android:layout_width="98dp"
                    android:textStyle="normal|bold"
                    android:textSize="14dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/affordYY"
                    android:hint="@string/year"
                    android:textSize="14dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/affordMM"
                    android:layout_weight="1"
                    android:hint="@string/months"
                    android:textSize="14dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical">

                <TextView
                    android:text="@string/irate"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/label"
                    android:layout_weight="0.06"
                    android:textStyle="normal|bold"
                    android:textSize="14dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/affordROI"
                    android:layout_weight="1"
                    android:hint="@string/perAnnumROI"
                    android:textSize="14dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:text="@string/affordableLoan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/emiLabel"
                        android:layout_weight="1"
                        android:textStyle="normal|bold"
                        android:textSize="14dp" />

                    <TextView
                        android:text="0.0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/affordLoanRes"
                        android:layout_weight="1"
                        android:layout_marginLeft="20dp"
                        android:textSize="14dp"
                        android:textColor="#ff669900"
                        android:textStyle="normal|bold" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:id="@+id/buttons">

                    <Button
                        android:text="@string/loanSumm"
                        android:layout_width="wrap_content"
                        android:id="@+id/affordLoanSummBtn"
                        android:layout_weight="1"
                        android:textColorLink="@color/colorPrimary"
                        android:background="@drawable/curve_button"
                        android:layout_height="30dp"
                        android:textColor="@android:color/background_light"
                        android:layout_marginRight="3dp" />

                    <Button
                        android:text="@string/clear"
                        android:layout_width="wrap_content"
                        android:id="@+id/afforReset"
                        android:layout_weight="1"
                        android:background="@drawable/curve_button"
                        android:layout_height="30dp"
                        android:textColor="@android:color/background_light"
                        android:layout_marginLeft="5dp" />

                </LinearLayout>


                <include layout="@layout/loan_res_layout"
                    android:id="@+id/affordLoanSummLayout"
                    android:visibility="invisible"></include>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
