<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:statusBarBackground="@android:color/darker_gray"
    android:id="@+id/emiLoanAffordability">

    <include layout="@layout/app_bar_layout" />


    <RelativeLayout
        android:orientation="vertical"
        android:id="@+id/compare_loan_full"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/loan1Ctnr"
                    android:layout_weight="1">

                    <TextView
                        android:text="@string/loan_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView"
                        android:textSize="15dp"
                        android:textStyle="normal|bold"
                        android:textAlignment="center" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/loan1amt"
                        android:hint="@string/loanAmt"
                        android:textSize="14sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/loan1ROI"
                        android:hint="@string/perAnnumROI"
                        android:textSize="14sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/loan1mm"
                        android:hint="@string/tenure_in_months"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/loan2Ctnr"
                    android:layout_weight="1">

                    <TextView
                        android:text="@string/loan_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView2"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:textStyle="normal|bold"
                        android:textAlignment="center" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/loan2amt"
                        android:layout_weight="1"
                        android:hint="@string/loanAmt"
                        android:textSize="14sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/loan2roi"
                        android:layout_weight="1"
                        android:hint="@string/perAnnumROI"
                        android:textSize="14sp"
                        android:inputType="numberDecimal" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/loan2mm"
                        android:layout_weight="1"
                        android:hint="@string/tenure_in_months"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginRight="3dp">

                    <Button
                        android:text="@string/compare"
                        android:layout_width="0dp"
                        android:id="@+id/compareBtn"
                        android:layout_weight="1"
                        android:background="@drawable/curve_button"
                        android:layout_height="30dp"
                        android:textColor="#ffffff" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="3dp">

                    <Button
                        android:text="@string/clear"
                        android:layout_width="0dp"
                        android:id="@+id/compareClear"
                        android:layout_weight="1"
                        android:background="@drawable/curve_button"
                        android:layout_height="30dp"
                        android:textColor="?android:attr/colorBackground" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:id="@+id/compareRes"
                android:visibility="invisible"
                >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:text="@string/emi_month_inst"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:id="@+id/compareEMI"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="15dp"
                        android:textStyle="normal|bold"
                        android:layout_marginBottom="3dp" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:text="@string/_0"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/loan1EMI"
                            android:layout_weight="1"
                            android:textAlignment="center" />

                        <TextView
                            android:text="@string/_0"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/loan2Emi"
                            android:layout_weight="1"
                            android:textAlignment="center" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp">

                    <TextView
                        android:text="@string/intPayable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/compareInterest"
                        android:textAlignment="center"
                        android:textColor="@android:color/background_dark"
                        android:textStyle="normal|bold"
                        android:textSize="15dp"
                        android:layout_marginBottom="3dp" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:text="@string/_0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/loan1interest"
                            android:layout_weight="1"
                            android:textAlignment="center" />

                        <TextView
                            android:text="@string/_0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/loan2interest"
                            android:layout_weight="1"
                            android:textAlignment="center" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp">

                    <TextView
                        android:text="@string/tot_amount_"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView8"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textStyle="normal|bold"
                        android:textSize="15dp"
                        android:layout_marginBottom="3dp" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:text="@string/_0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/loan1tot"
                            android:layout_weight="1"
                            android:textAlignment="center" />

                        <TextView
                            android:text="@string/_0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/loan2tot"
                            android:layout_weight="1"
                            android:textAlignment="center" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
